# 3d-engine-2

./: .gitignore  Cargo.toml  README.md  actions.json  generic_bindings.json  shell.nix
assets/: 2c0f9e16-66c8-4891-bfb6-d79394ee56b8.glb  8b16ddeb-f011-4f13-bab7-615edd40aee9.glb  cb088356-1d69-41a5-b46d-4bc22aafa1b7.glb  f411cb1d-8c7f-4863-926a-40b8242bd166.glb
shaders/: shader.wgsl
src/: demo.rs  lib.rs  main.rs  model.rs  renderer.rs
src/model/: loader.rs  material.rs  mesh.rs  mod.rs  tests.rs  texture.rs  vertex.rs
src/scene/: camera.rs  mod.rs  renderer.rs  tests.rs  transform.rs
src/shaders/: shader.wgsl  shader2.wgsl
src/vr/: frame.rs  math.rs  mod.rs  pipeline.rs  shader_utils.rs  system.rs  timing.rs  vulkan.rs
src/vr/shaders/: fragment.glsl  fragment.spv  simple.wgsl  vertex.glsl  vertex.spv  vr.wgsl
tests/models/: cube.glb  cube.gltf  cube.mtl  generate_cube_bin.py  generate_glb.py  generate_test_texture.py
vr-poc/: build.rs
vr-poc/shaders/: triangle.vert  triangle.vert.spv
vr-poc/src/: main.rs
vr-poc/src/vr/: mod.rs  renderer.rs  session.rs  types.rs  vulkan.rs
