[package]
name = "wgpu-3d-viewer"
version = "0.1.0"
edition = "2021"
default-run = "wgpu-3d-viewer"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wgpu-3d-viewer"
path = "src/main.rs"

[[bin]]
name = "vr-poc"
path = "vr-poc/src/main.rs"

[dependencies]
wgpu = "23.0.1"
winit = "0.29"
env_logger = "0.10"
log = "0.4"
cfg-if = "1"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.25"
gltf = "1.3"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
anyhow = "1.0"
raw-window-handle = "0.6"
base64 = "0.21"
approx = "0.5.1"
openxr = { version = "0.17", features = ["linked"] }
clap = { version = "4.4", features = ["derive"] }
ash = { version = "0.37", features = ["linked"] }
ash-window = "0.12"
gpu-allocator = { version = "0.22", default-features = false, features = ["vulkan"] }
shaderc = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { version = "23.0.1", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[dev-dependencies]
tempfile = "3.8"
assert_fs = "1.0"
test-log = "0.2"
serial_test = "2.0.0"
tokio = { version = "1.32", features = ["full"] }
